// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component old badge props should still work 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#444",
        "borderRadius": 20,
        "padding": 12,
        "paddingBottom": 3,
        "paddingTop": 3,
        "position": "absolute",
        "right": 30,
        "top": 2,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 14,
        },
        undefined,
      ]
    }
  >
    foo
  </Text>
</View>
`;

exports[`Badge Component should render if element included 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#444",
        "borderRadius": 20,
        "padding": 12,
        "paddingBottom": 3,
        "paddingTop": 3,
        "position": "absolute",
        "right": 30,
        "top": 2,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    title="foo"
  />
</View>
`;

exports[`Badge Component should render without issue 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#444",
        "borderRadius": 20,
        "padding": 12,
        "paddingBottom": 3,
        "paddingTop": 3,
        "position": "absolute",
        "right": 30,
        "top": 2,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 14,
        },
        undefined,
      ]
    }
  />
</View>
`;
